# tatis

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.host-db.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  generate_diagram.py  justfile  manage.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: django.yml  prod.yml  sync-uat.yml
content/: admin.py  models.py  urls.py  utils.py  views.py
content/migrations/: 0001_initial.py  0002_suspendedlist.py  0003_alter_suspendedlist_is_suspended.py
content/tests/: test_models.py  test_utils.py
requirements/: base.txt  local.txt
tatisjr/: asgi.py  settings.py  tests.py  urls.py  wsgi.py
templates/: _base.html
templates/content/: home.html
