[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tatis"
version = "1.0.0"
description = "Does Fernando Tatis Jr have an error today?"
requires-python = ">=3.14"
dependencies = [
    "Django",
    "django-constance[database]",
    "django-csp",
    "django-environ",
    "django-extensions",
    "django-health-check<5.0",
    "django-model-info",
    "django-permissions-policy",
    "djangorestframework",
    "djhtml",
    "gunicorn",
    "MLB-StatsAPI",
    "psycopg[pool]",
    "requests",
    "whitenoise",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0",
    "django-upgrade>=1.13",
    "freezegun",
    "mutmut>=2.4",
    "prek",
    "pytest>=7.0",
    "pytest-cov",
    "pytest-django",
    "ruff>=0.6",
    "zizmor>=1.18.0",
]

[tool.setuptools]
packages = ["content", "tatisjr"]

[tool.ruff]
line-length = 130
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "venv",
    "migrations",
    "manage.py",
    "asgi.py",
    "wsgi.py",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C90",    # mccabe complexity
    "UP",     # pyupgrade
    "TRY",    # tryceratops
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["content", "tatisjr"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tatisjr.settings"
python_files = ["test_*.py"]
addopts = "--reuse-db"

[tool.coverage.report]
fail_under = 95
